innerText from element with "white-space: pre-line" incorrectly removes line breaks https://bugs.webkit.org/show_bug.cgi?id=240566

Reviewed by NOBODY (OOPS!).

Element.innerText() now preserves new lines when "white-space: pre-line" is used, to match
the behavior of Blink & Gecko.

* LayoutTests/imported/w3c/web-platform-tests/html/dom/elements/the-innertext-and-outertext-properties/getter-expected.txt:
* Source/WebCore/editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextRun):